# iree

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CMakeLists.txt  CNAME  README.md  SUBMODULE_VERSIONS  SUBMODULE_VERSIONS.txt  WORKSPACE  index.html  sitemap.xml
.github/workflows/: build_and_test_android.yml  build_package.yml  build_test_runtime.yml  ci.yml  ci_linux_arm64_clang.yml  ci_linux_x64_clang.yml  ci_linux_x64_clang_asan.yml  ci_linux_x64_clang_byollvm.yml  ci_linux_x64_clang_debug.yml  ci_linux_x64_clang_tsan.yml  ci_linux_x64_gcc.yml  ci_nightly.yml  ci_test_1.yml  ci_test_2.yml  ci_windows_x64_msvc.yml  fix_lint.yml  pkgci.yml  pkgci_build_packages.yml  pkgci_core_tests.yml  pkgci_regression_test.yml  pkgci_regression_test_cpu.yml  pkgci_test_amd_mi250.yml  pkgci_test_amd_mi300.yml  pkgci_test_amd_w7900.yml  pkgci_test_android.yml  pkgci_test_nvidia_t4.yml  pkgci_test_package.yml  pkgci_test_tensorflow_cpu.yml  pkgci_unit_test.yml  publish_website.yml  samples.yml  schedule_snapshot_release.yml  test_package.yml  test_pushing_branches.yml
assets/stylesheets/: extra.css  iree.css  openxla.css
bindings/: index.html
bindings/c-api/: index.html
bindings/python/: index.html
bindings/tensorflow-lite/: index.html
bindings/tflite/: BUILD  CMakeLists.txt  smoke_test.cc
blog/: index.html
blog/2021-07-19-tflite-tosa/: index.html
blog/2021-09-21-evaluating-iree/: index.html
blog/2021-10-13-mmt4d/: index.html
blog/2021-10-15-cuda-backend/: index.html
blog/2023-06-06-tour/: index.html
build_tools/bazel/: iree.bazelrc
build_tools/cmake/: build_android.sh  build_benchmarks.sh  build_compiler_emscripten.sh  build_e2e_test_artifacts.sh  build_runtime.sh  iree_alwayslink.cmake  iree_benchmark_suite.cmake  iree_bytecode_module.cmake  iree_c_embed_data.cmake  iree_cc_library.cmake  iree_check_test.cmake  iree_copts.cmake  iree_e2e_matmul_test.cmake  iree_external_cmake_options.cmake  iree_hal_cts_test_suite.cmake  iree_lit_test.cmake  iree_macros.cmake  iree_setup_toolchain.cmake  iree_third_party_cmake_options.cmake  setup_ccache.sh  test_pkg.sh
build_tools/docker/: docker_run.sh  manage_images.py  prod_digests.txt
build_tools/docker/base/: Dockerfile  install_tbb.sh
build_tools/docker/dockerfiles/: colab.Dockerfile
build_tools/embed_data/: CMakeLists.txt  generate_embed_data_main.cc
build_tools/github_actions/: configure_ci.py
build_tools/pkgci/: build_linux_dist.sh  build_linux_packages.sh  build_tests_using_package.sh  setup_venv.py  test_package.sh
build_tools/python_deploy/: build_macos_packages.sh  build_windows_packages.ps1  build_windows_packages.sh  install_macos_deps.sh  install_windows_deps.ps1  install_windows_deps.sh
build_tools/scripts/git/: update_submodules_for_ci.py
build_tools/testing/: run_python_notebook.sh
building-from-source/: index.html
building-from-source/android/: index.html
building-from-source/getting-started/: index.html
building-from-source/ios/: index.html
building-from-source/optional-features/: index.html
building-from-source/python-bindings-and-importers/: index.html
building-from-source/riscv/: index.html
community/: index.html
community/blog/: index.html
community/projects/: index.html
community/tags/: index.html
compiler/: .clang-format
compiler/plugins/: iree_compiler_plugin.cmake
compiler/plugins/input_tosa/: BUILD.bazel  CMakeLists.txt  PluginRegistration.cpp
compiler/plugins/input_tosa/InputConversion/: BUILD.bazel  CMakeLists.txt  Converti48Toi64.cpp  PassDetail.h  Passes.cpp  Passes.h  Passes.td  StripSignedness.cpp  TosaToLinalgExt.cpp  VerifyCompilerTOSAInputLegality.cpp
compiler/plugins/input_tosa/InputConversion/test/: CMakeLists.txt
deployment-configurations/: index.html
deployment-configurations/bare-metal/: index.html
deployment-configurations/cpu/: index.html
deployment-configurations/cpu-dylib/: index.html
deployment-configurations/gpu-cuda-rocm/: index.html
deployment-configurations/gpu-vulkan/: index.html
developers/: index.html
developers/usage-best-practices/: index.html
developers/vulkan-environment-setup/: index.html
docs/GetStarted/: getting_started_windows_bazel.md
docs/website/: README.md  mkdocs.yml  postprocess_dialect_docs.py  requirements.txt
experimental/regression_suite/: setup.py
experimental/sample_web_static/: CMakeLists.txt  build_static_emscripten_demo.sh  device_multithreaded.c  device_sync.c  index.html  main.c  simple_mul.mlir
experimental/web/: generate_web_metrics.sh
experimental/web/sample_dynamic/: CMakeLists.txt  build_sample.sh  device_multithreaded.c  index.html  iree_api.js  iree_worker.js  main.c
extensions/: index.html
getting-started/: index.html
getting-started/jax/: index.html
getting-started/pytorch/: index.html
getting-started/tensorflow/: index.html
getting-started/tflite/: index.html
guides/: index.html
guides/compiler-tips/: index.html
guides/deployment-configurations/: index.html
guides/developer-tips/: index.html
guides/ml-frameworks/: index.html
guides/parameters/: index.html
iree/base/: BUILD  CMakeLists.txt
iree/hal/: buffer.c  buffer_heap.c  device.h
iree/schemas/: dylib_executable_def.fbs
iree/tools/: BUILD  CMakeLists.txt  iree-opt-library.cc
iree/vm/: BUILD  bytecode_dispatch.c  context.c  invocation.c  list.c  ops.h  ref.c  stack.c
ml-frameworks/: index.html
ml-frameworks/jax/: index.html
ml-frameworks/tensorflow/: index.html
ml-frameworks/tensorflow-lite/: index.html
reference/: index.html
reference/bindings/: index.html
reference/extensions/: index.html
reference/glossary/: index.html
reference/mlir-dialects/: index.html
reference/optimization-options/: index.html
runtime/: setup.py
samples/colab/: low_level_invoke_function.ipynb  test_notebooks.py
scripts/: update_e2e_coverage.py  update_op_coverage.py
scripts/git/: check_submodule_init.py
search/: search_index.json
tests/e2e/stream_ops/: BUILD.bazel  CMakeLists.txt  async_fill.mlir
tools/: CMakeLists.txt  iree-cpuinfo.c
(+639 files in other folders)
